--- a/Diplom_project/pom.xml
+++ b/Diplom_project/pom.xml
@@ -69,6 +69,14 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.22</version>
+    </dependency>
+
   </dependencies>
 
   <build>
